<?xml version="1.0"?>
<package>
    <name>lane_mapping</name>
    <version>0.0.0</version>

    <description>
        Lane mapping package for road-slam
    </description>

    <maintainer email="zqiaoac@connect.ust.hk">QIAO Zhijian</maintainer>

    <license>BSD</license>

    <author email="zqiaoac@connect.ust.hk">QIAO Zhijian</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>openlane_bag</build_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>openlane_bag</run_depend>

    <test_depend>rostest</test_depend>
    <test_depend>rosbag</test_depend>

    <export>
    </export>
</package>
